--- a/gameplay.html
+++ b/gameplay.html
@@ -247,37 +247,37 @@
             font-size: 1.2rem;
         }
 
-        /* Estimation Section - Kompakter und proportionaler */
+        /* Estimation Section - Kompakter und proportional zu anderen Elementen */
         .estimation-section {
             background: rgba(255, 255, 255, 0.12);
             backdrop-filter: blur(30px);
             border-radius: 15px;
-            padding: 10px 12px;
+            padding: 12px;
             margin-bottom: 10px;
             border: 1px solid rgba(255, 255, 255, 0.25);
             box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
-            flex: 1;
+            flex-shrink: 0;
             display: flex;
             flex-direction: column;
-            min-height: 0;
             overflow: hidden;
+            max-height: 240px;
         }
 
         .estimation-title {
             color: white;
-            font-size: 0.8rem;
+            font-size: 0.85rem;
             font-weight: 600;
             text-align: center;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
             flex-shrink: 0;
             opacity: 0.95;
         }
 
-        /* Current Selection Display - Kompakter und nur sichtbar nach Auswahl */
+        /* Current Selection Display - Kompakter */
         .current-selection {
             text-align: center;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
             flex-shrink: 0;
             opacity: 0;
             transform: scale(0.9);
@@ -289,16 +289,16 @@
         .current-selection.visible {
             opacity: 1;
             transform: scale(1);
-            max-height: 50px;
+            max-height: 45px;
         }
 
         .selection-display {
             background: linear-gradient(135deg, rgba(76, 175, 80, 0.2), rgba(76, 175, 80, 0.3));
             border: 2px solid rgba(76, 175, 80, 0.5);
             border-radius: 10px;
-            padding: 6px 10px;
+            padding: 6px 12px;
             display: inline-block;
-            min-width: 90px;
+            min-width: 85px;
         }
 
         .selection-number {
@@ -315,19 +315,18 @@
             font-weight: 600;
         }
 
-        /* Number Grid - Dynamisch angepasst */
+        /* Number Grid - Kompakter für proportionales Design */
         .number-grid {
             display: grid;
-            gap: 10px;
+            gap: 8px;
             justify-items: center;
-            flex: 1;
             align-content: center;
             overflow: hidden;
         }
 
         /* Dynamische Grid-Anpassung basierend auf Anzahl der Spieler */
         .number-grid.small {
-            grid-template-columns: repeat(auto-fit, minmax(55px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(48px, 1fr));
         }
         .number-grid.medium {
             grid-template-columns: repeat(5, 1fr);
@@ -338,13 +337,13 @@
 
         .number-btn {
             width: 100%;
-            max-width: 50px;
-            height: 50px;
+            max-width: 48px;
+            height: 48px;
             background: rgba(255, 255, 255, 0.15);
             border: 2px solid rgba(255, 255, 255, 0.3);
             color: white;
             border-radius: 50%;
-            font-size: 1.1rem;
+            font-size: 1.05rem;
             font-weight: 800;
             cursor: pointer;
             display: flex;
@@ -369,8 +368,8 @@
 
         /* Für viele Spieler: Kleinere Buttons */
         .number-grid.large .number-btn {
-            max-width: 42px;
-            height: 42px;
+            max-width: 40px;
+            height: 40px;
             font-size: 0.95rem;
         }
 
@@ -970,8 +969,12 @@
                 font-size: 0.95rem;
             }
 
+            .estimation-section {
+                max-height: 220px;
+            }
+
             .estimation-title {
-                font-size: 0.75rem;
+                font-size: 0.8rem;
             }
 
             .number-btn {
@@ -981,14 +984,18 @@
             }
 
             .number-grid.large .number-btn {
-                max-width: 38px;
-                height: 38px;
+                max-width: 36px;
+                height: 36px;
                 font-size: 0.9rem;
             }
 
+            .number-grid {
+                gap: 7px;
+            }
+
             .selection-display {
-                min-width: 80px;
-                padding: 5px 8px;
+                min-width: 75px;
+                padding: 5px 10px;
             }
 
             .selection-number {
@@ -1005,14 +1012,19 @@
                 font-size: 0.9rem;
             }
 
+            .estimation-section {
+                max-height: 200px;
+                padding: 10px;
+            }
+
             .estimation-title {
-                font-size: 0.75rem;
-                margin-bottom: 6px;
+                font-size: 0.8rem;
+                margin-bottom: 8px;
             }
 
             .number-btn {
-                max-width: 38px;
-                height: 38px;
+                max-width: 40px;
+                height: 40px;
                 font-size: 0.95rem;
             }
 
@@ -1022,12 +1034,20 @@
                 font-size: 0.85rem;
             }
 
+            .number-grid {
+                gap: 6px;
+            }
+
             .answer-btn {
                 padding: 12px 8px;
             }
 
             .current-selection {
-                margin-bottom: 6px;
+                margin-bottom: 8px;
+            }
+
+            .current-selection.visible {
+                max-height: 40px;
             }
         }
 
@@ -1037,7 +1057,7 @@
             }
 
             .question-card {
-                padding: 12px 15px;
+                padding: 10px 15px;
                 margin-bottom: 8px;
             }
 
@@ -1048,16 +1068,17 @@
 
             .estimation-section {
                 padding: 8px 10px;
+                max-height: 180px;
             }
 
             .estimation-title {
-                font-size: 0.7rem;
-                margin-bottom: 5px;
+                font-size: 0.75rem;
+                margin-bottom: 6px;
             }
 
             .number-btn {
-                max-width: 35px;
-                height: 35px;
+                max-width: 36px;
+                height: 36px;
                 font-size: 0.85rem;
             }
 
@@ -1065,6 +1086,10 @@
                 max-width: 32px;
                 height: 32px;
                 font-size: 0.8rem;
+            }
+
+            .number-grid {
+                gap: 5px;
             }
 
             .answer-btn {
@@ -1076,11 +1101,15 @@
             }
 
             .current-selection {
-                margin-bottom: 5px;
+                margin-bottom: 6px;
+            }
+
+            .current-selection.visible {
+                max-height: 38px;
             }
 
             .selection-display {
-                padding: 4px 6px;
+                padding: 4px 8px;
                 min-width: 70px;
             }
 
@@ -1164,7 +1193,7 @@
 
         <!-- Estimation Section -->
         <div class="estimation-section fadeInUp" id="estimation-section">
-            <div class="estimation-title">🎯 Wie viele mit "Ja"?</div>
+            <div class="estimation-title">🎯 Wie viele antworten mit "Ja"?</div>
 
             <!-- Current Selection Display - Nur sichtbar nach Auswahl -->
             <div class="current-selection" id="current-selection">
