--- a/gameplay.html
+++ b/gameplay.html
@@ -247,21 +247,20 @@
             font-size: 1.2rem;
         }
 
-        /* Estimation Section - Weicher und harmonischer */
+        /* Estimation Section - Sauber und proportional */
         .estimation-section {
             background: linear-gradient(135deg, rgba(255, 255, 255, 0.12), rgba(255, 255, 255, 0.08));
             backdrop-filter: blur(30px);
             border-radius: 20px;
-            padding: 14px;
+            padding: 15px;
             margin-bottom: 10px;
             border: 1px solid rgba(255, 255, 255, 0.3);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.12),
-            inset 0 1px 2px rgba(255, 255, 255, 0.1);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.12);
             flex-shrink: 0;
             display: flex;
             flex-direction: column;
+            gap: 12px;
             overflow: hidden;
-            max-height: 240px;
         }
 
         .estimation-title {
@@ -269,48 +268,51 @@
             font-size: 0.85rem;
             font-weight: 600;
             text-align: center;
-            margin-bottom: 12px;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
             flex-shrink: 0;
             opacity: 0.95;
             letter-spacing: 0.3px;
         }
 
-        /* Current Selection Display - Weicher und harmonischer */
+        /* Current Selection Display - Erscheint erst nach Auswahl */
         .current-selection {
             text-align: center;
-            margin-bottom: 10px;
             flex-shrink: 0;
             opacity: 0;
-            transform: scale(0.95) translateY(-5px);
-            transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
             max-height: 0;
             overflow: hidden;
+            transform: translateY(-10px);
+            transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
 
         .current-selection.visible {
             opacity: 1;
-            transform: scale(1) translateY(0);
-            max-height: 45px;
+            max-height: 50px;
+            transform: translateY(0);
+            margin-bottom: 8px;
         }
 
         .selection-display {
-            background: linear-gradient(135deg, rgba(76, 175, 80, 0.25), rgba(33, 150, 243, 0.25));
+            background: linear-gradient(135deg, rgba(76, 175, 80, 0.25), rgba(33, 150, 243, 0.2));
             border: 2px solid rgba(76, 175, 80, 0.6);
-            border-radius: 20px;
+            border-radius: 18px;
             padding: 8px 16px;
-            display: inline-block;
+            display: inline-flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 2px;
             min-width: 100px;
-            box-shadow: 0 4px 15px rgba(76, 175, 80, 0.2);
+            box-shadow: 0 4px 15px rgba(76, 175, 80, 0.25);
             backdrop-filter: blur(10px);
+            transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
 
         .selection-number {
             color: white;
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             font-weight: 800;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
-            margin-bottom: 2px;
+            line-height: 1;
             letter-spacing: 0.5px;
         }
 
@@ -319,12 +321,13 @@
             font-size: 0.7rem;
             font-weight: 600;
             text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
+            white-space: nowrap;
         }
 
-        /* Number Grid - Kompakter für proportionales Design */
+        /* Number Grid - Sauber und kompakt */
         .number-grid {
             display: grid;
-            gap: 8px;
+            gap: 10px;
             justify-items: center;
             align-content: center;
             overflow: hidden;
@@ -332,7 +335,7 @@
 
         /* Dynamische Grid-Anpassung basierend auf Anzahl der Spieler */
         .number-grid.small {
-            grid-template-columns: repeat(auto-fit, minmax(48px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
         }
         .number-grid.medium {
             grid-template-columns: repeat(5, 1fr);
@@ -343,19 +346,19 @@
 
         .number-btn {
             width: 100%;
-            max-width: 48px;
-            height: 48px;
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.1));
+            max-width: 52px;
+            height: 52px;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.08));
             border: 2px solid rgba(255, 255, 255, 0.35);
             color: white;
             border-radius: 50%;
-            font-size: 1.05rem;
+            font-size: 1.1rem;
             font-weight: 800;
             cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
-            transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+            transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
             backdrop-filter: blur(20px);
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15),
             inset 0 1px 2px rgba(255, 255, 255, 0.1);
@@ -375,7 +378,7 @@
         .number-btn.selected {
             background: linear-gradient(135deg, #4CAF50, #2196F3);
             border-color: #4CAF50;
-            transform: scale(1.1);
+            transform: scale(1.12);
             box-shadow: 0 8px 30px rgba(76, 175, 80, 0.5),
             0 0 20px rgba(76, 175, 80, 0.3);
             color: white;
@@ -384,19 +387,19 @@
         .number-btn.selected::before {
             content: '';
             position: absolute;
-            inset: -3px;
+            inset: -4px;
             border-radius: 50%;
             background: linear-gradient(135deg, rgba(76, 175, 80, 0.3), rgba(33, 150, 243, 0.3));
             z-index: -1;
-            filter: blur(8px);
-            opacity: 0.8;
+            filter: blur(10px);
+            opacity: 0.7;
         }
 
         /* Für viele Spieler: Kleinere Buttons */
         .number-grid.large .number-btn {
-            max-width: 40px;
-            height: 40px;
-            font-size: 0.95rem;
+            max-width: 44px;
+            height: 44px;
+            font-size: 1rem;
         }
 
         /* Submit Button */
@@ -996,7 +999,6 @@
             }
 
             .estimation-section {
-                max-height: 220px;
                 padding: 12px;
             }
 
@@ -1005,29 +1007,29 @@
             }
 
             .number-btn {
-                max-width: 42px;
-                height: 42px;
+                max-width: 46px;
+                height: 46px;
                 font-size: 1rem;
             }
 
             .number-grid.large .number-btn {
-                max-width: 36px;
-                height: 36px;
+                max-width: 38px;
+                height: 38px;
                 font-size: 0.9rem;
             }
 
             .number-grid {
-                gap: 7px;
+                gap: 8px;
             }
 
             .selection-display {
-                min-width: 85px;
-                padding: 6px 12px;
+                min-width: 90px;
+                padding: 6px 14px;
                 border-radius: 16px;
             }
 
             .selection-number {
-                font-size: 1.1rem;
+                font-size: 1.2rem;
             }
 
             .selection-label {
@@ -1041,45 +1043,39 @@
             }
 
             .estimation-section {
-                max-height: 200px;
                 padding: 12px;
             }
 
             .estimation-title {
                 font-size: 0.8rem;
-                margin-bottom: 10px;
             }
 
             .number-btn {
-                max-width: 40px;
-                height: 40px;
-                font-size: 0.95rem;
+                max-width: 44px;
+                height: 44px;
+                font-size: 1rem;
             }
 
             .number-grid.large .number-btn {
-                max-width: 35px;
-                height: 35px;
-                font-size: 0.85rem;
+                max-width: 36px;
+                height: 36px;
+                font-size: 0.9rem;
             }
 
             .number-grid {
-                gap: 6px;
+                gap: 8px;
             }
 
             .answer-btn {
                 padding: 12px 8px;
             }
 
-            .current-selection {
-                margin-bottom: 8px;
-            }
-
             .current-selection.visible {
-                max-height: 42px;
+                max-height: 48px;
             }
 
             .selection-display {
-                padding: 6px 14px;
+                padding: 7px 14px;
             }
         }
 
@@ -1100,29 +1096,28 @@
 
             .estimation-section {
                 padding: 10px;
-                max-height: 180px;
                 border-radius: 16px;
+                gap: 10px;
             }
 
             .estimation-title {
                 font-size: 0.75rem;
-                margin-bottom: 8px;
             }
 
             .number-btn {
-                max-width: 36px;
-                height: 36px;
-                font-size: 0.85rem;
+                max-width: 40px;
+                height: 40px;
+                font-size: 0.95rem;
             }
 
             .number-grid.large .number-btn {
-                max-width: 32px;
-                height: 32px;
-                font-size: 0.8rem;
+                max-width: 34px;
+                height: 34px;
+                font-size: 0.85rem;
             }
 
             .number-grid {
-                gap: 5px;
+                gap: 6px;
             }
 
             .answer-btn {
@@ -1133,22 +1128,19 @@
                 font-size: 1rem;
             }
 
-            .current-selection {
+            .current-selection.visible {
+                max-height: 45px;
                 margin-bottom: 6px;
             }
 
-            .current-selection.visible {
-                max-height: 40px;
-            }
-
             .selection-display {
-                padding: 5px 10px;
-                min-width: 75px;
+                padding: 6px 12px;
+                min-width: 80px;
                 border-radius: 14px;
             }
 
             .selection-number {
-                font-size: 1rem;
+                font-size: 1.1rem;
             }
 
             .selection-label {
