--- a/multiplayer-category-selection.html
+++ b/multiplayer-category-selection.html
@@ -84,42 +84,6 @@
             transform: translateY(-2px);
         }
 
-        /* Connection Status */
-        .connection-status {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 10px;
-            padding: 10px 15px;
-            color: white;
-            font-size: 0.8rem;
-            z-index: 1000;
-            transition: all 0.3s ease;
-        }
-
-        .connection-status.connected {
-            border: 1px solid #4CAF50;
-            background: rgba(76, 175, 80, 0.2);
-        }
-
-        .connection-status.disconnected {
-            border: 1px solid #f44336;
-            background: rgba(244, 67, 54, 0.2);
-        }
-
-        .connection-status.connecting {
-            border: 1px solid #ff9800;
-            background: rgba(255, 152, 0, 0.2);
-            animation: pulse 1s infinite;
-        }
-
-        @keyframes pulse {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.7; }
-        }
-
         .screen-title {
             color: white;
             font-size: 2.5rem;
@@ -833,13 +797,6 @@
 
         /* Mobile Responsive */
         @media (max-width: 768px) {
-            .connection-status {
-                top: 80px;
-                right: 15px;
-                font-size: 0.7rem;
-                padding: 8px 12px;
-            }
-
             .screen-title {
                 font-size: 2rem;
             }
@@ -897,11 +854,6 @@
 
 <!-- Back Button -->
 <button class="back-button" onclick="goBack()">← Zurück</button>
-
-<!-- Connection Status -->
-<div class="connection-status connecting" id="connection-status">
-    🔄 Verbinde...
-</div>
 
 <!-- Debug Panel -->
 <div class="debug-panel" id="debug-panel">
@@ -1282,7 +1234,6 @@
             this.isConnected = false;
             this.currentGameId = null;
             this.listeners = [];
-            this.connectionListeners = [];
 
             this.config = {
                 apiKey: "AIzaSyC_cu_2X2uFCPcxYetxIUHi2v56F1Mz0Vk",
@@ -1298,139 +1249,51 @@
 
         async initialize() {
             try {
-                this.log('🔥 Firebase Service v3.0 - Initialisierung gestartet...');
+                this.log('🔥 Firebase Service - Initialisierung gestartet...');
 
                 if (typeof firebase === 'undefined') {
                     throw new Error('Firebase SDK nicht geladen');
                 }
-                this.log('✅ Firebase SDK verfügbar');
 
                 if (!firebase.apps || firebase.apps.length === 0) {
                     this.app = firebase.initializeApp(this.config);
-                    this.log('✅ Firebase App initialisiert');
                 } else {
                     this.app = firebase.app();
-                    this.log('✅ Firebase App bereits vorhanden');
                 }
 
                 this.database = firebase.database();
-                this.log('✅ Database Service erhalten');
+                await new Promise(resolve => setTimeout(resolve, 300));
 
-                this.isConnected = await this.testConnectionWithRetry();
+                const connectedRef = this.database.ref('.info/connected');
+                const snapshot = await connectedRef.once('value');
+                this.isConnected = snapshot.val() === true;
 
-                if (!this.isConnected) {
-                    throw new Error('Firebase-Verbindung fehlgeschlagen');
+                if (this.isConnected) {
+                    this.isInitialized = true;
+                    this.log('✅ Firebase verbunden');
+                } else {
+                    this.log('⚠️ Firebase nicht verbunden');
                 }
 
-                this.setupConnectionMonitoring();
-
-                this.isInitialized = true;
-                this.log('🎉 Firebase Service vollständig bereit!');
-                return true;
+                return this.isInitialized;
 
             } catch (error) {
-                this.log(`❌ Firebase Initialisierung fehlgeschlagen: ${error.message}`, 'error');
+                this.log(`❌ Firebase Fehler: ${error.message}`, 'error');
                 this.isInitialized = false;
                 this.isConnected = false;
                 return false;
             }
         }
 
-        async testConnectionWithRetry(maxRetries = 3) {
-            for (let attempt = 1; attempt <= maxRetries; attempt++) {
-                this.log(`🔄 Verbindungsversuch ${attempt}/${maxRetries}...`);
-
-                try {
-                    const connected = await this.performConnectionTest();
-                    if (connected) {
-                        this.log(`✅ Verbindung erfolgreich bei Versuch ${attempt}`);
-                        return true;
-                    }
-                } catch (error) {
-                    this.log(`⚠️ Versuch ${attempt} fehlgeschlagen: ${error.message}`, 'warning');
-                }
-
-                if (attempt < maxRetries) {
-                    await this.delay(1000 * attempt);
-                }
-            }
-
-            this.log('❌ Alle Verbindungsversuche fehlgeschlagen', 'error');
-            return false;
-        }
-
-        async performConnectionTest(timeoutMs = 8000) {
-            return new Promise((resolve, reject) => {
-                const timeout = setTimeout(() => {
-                    reject(new Error(`Timeout nach ${timeoutMs}ms`));
-                }, timeoutMs);
-
-                try {
-                    const connectedRef = this.database.ref('.info/connected');
-
-                    connectedRef.once('value', (snapshot) => {
-                        clearTimeout(timeout);
-                        const isConnected = snapshot.val() === true;
-                        this.log(`🔍 Verbindungsstatus: ${isConnected ? 'Verbunden' : 'Getrennt'}`);
-                        resolve(isConnected);
-                    }, (error) => {
-                        clearTimeout(timeout);
-                        reject(error);
-                    });
-
-                } catch (error) {
-                    clearTimeout(timeout);
-                    reject(error);
-                }
-            });
-        }
-
-        setupConnectionMonitoring() {
-            try {
-                const connectedRef = this.database.ref('.info/connected');
-
-                const connectionListener = connectedRef.on('value', (snapshot) => {
-                    const wasConnected = this.isConnected;
-                    this.isConnected = snapshot.val() === true;
-
-                    if (wasConnected !== this.isConnected) {
-                        this.log(`🔄 Verbindungsstatus geändert: ${this.isConnected ? 'Verbunden' : 'Getrennt'}`);
-                        this.notifyConnectionChange(this.isConnected);
-                    }
-                });
-
-                this.listeners.push({ ref: connectedRef, listener: connectionListener });
-                this.log('✅ Verbindungsüberwachung aktiv');
-
-            } catch (error) {
-                this.log(`❌ Fehler beim Setup der Verbindungsüberwachung: ${error.message}`, 'error');
-            }
-        }
-
-        onConnectionChange(callback) {
-            this.connectionListeners.push(callback);
-        }
-
-        notifyConnectionChange(connected) {
-            this.connectionListeners.forEach(callback => {
-                try {
-                    callback(connected);
-                } catch (error) {
-                    this.log(`❌ Fehler beim Benachrichtigen der Verbindungsänderung: ${error.message}`, 'error');
-                }
-            });
-        }
-
         async createGame(gameData) {
             if (!this.isConnected) {
-                throw new Error('Keine Firebase-Verbindung verfügbar');
+                this.log('⚠️ Firebase offline - überspringe Spiel-Erstellung');
+                return null;
             }
 
             try {
                 const gameId = gameData.gameId || this.generateGameId();
                 const hostPlayerId = this.generatePlayerId(gameData.hostName, true);
-
-                this.log(`🎮 Erstelle Spiel: ${gameId} mit Host: ${hostPlayerId}`);
 
                 const gameObject = {
                     gameId: gameId,
@@ -1475,8 +1338,8 @@
                 };
 
             } catch (error) {
-                this.log(`❌ Fehler beim Erstellen des Spiels: ${error.message}`, 'error');
-                throw error;
+                this.log(`❌ Fehler beim Erstellen: ${error.message}`, 'error');
+                return null;
             }
         }
 
@@ -1493,25 +1356,16 @@
         }
 
         cleanup() {
-            this.log('🧹 Firebase Service Cleanup...');
-
+            this.log('🧹 Cleanup...');
             this.listeners.forEach(({ ref, listener }) => {
                 try {
                     ref.off('value', listener);
                 } catch (error) {
-                    this.log(`❌ Fehler beim Entfernen des Listeners: ${error.message}`, 'error');
+                    this.log(`❌ Listener-Fehler: ${error.message}`, 'error');
                 }
             });
-
             this.listeners = [];
-            this.connectionListeners = [];
             this.currentGameId = null;
-
-            this.log('✅ Firebase Service bereinigt');
-        }
-
-        async delay(ms) {
-            return new Promise(resolve => setTimeout(resolve, ms));
         }
 
         get isReady() {
@@ -1567,7 +1421,7 @@
     });
 
     async function initMultiplayerCategorySelection() {
-        log('🌐 Multiplayer Category Selection v3.0 - Initialisierung gestartet...');
+        log('🌐 Multiplayer Category Selection - Initialisierung gestartet...');
         showLoading();
 
         try {
@@ -1588,18 +1442,8 @@
                 return;
             }
 
-            // SCHRITT 3: Firebase initialisieren
-            updateConnectionStatus('connecting', 'Verbinde mit Firebase...');
-            const firebaseReady = await firebaseService.initialize();
-
-            if (firebaseReady) {
-                log('✅ Firebase erfolgreich initialisiert');
-                updateConnectionStatus('connected', 'Firebase verbunden');
-                setupConnectionStatus();
-            } else {
-                log('⚠️ Firebase-Verbindung fehlgeschlagen - weiter im Offline-Modus');
-                updateConnectionStatus('disconnected', 'Offline-Modus');
-            }
+            // SCHRITT 3: Firebase initialisieren (still im Hintergrund)
+            firebaseService.initialize();
 
             // SCHRITT 4: Host-Setup
             if (!gameState.isHost) {
@@ -1761,13 +1605,25 @@
             document.getElementById('host-name').textContent = gameState.playerName;
             document.getElementById('game-id-display').textContent = gameState.gameId;
 
+            // Firebase game creation (still im Hintergrund, keine Notifications)
             if (firebaseService.isReady && !gameState.playerId) {
                 log('🎮 Erstelle Firebase-Spiel...');
-                await createGameInFirebase();
+                const gameResult = await firebaseService.createGame({
+                    gameId: gameState.gameId,
+                    hostName: gameState.playerName,
+                    categories: gameState.selectedCategories || [],
+                    difficulty: gameState.difficulty || 'medium'
+                });
+
+                if (gameResult && gameResult.gameId && gameResult.playerId) {
+                    gameState.gameId = gameResult.gameId;
+                    gameState.playerId = gameResult.playerId;
+                    gameState.save();
+                    document.getElementById('game-id-display').textContent = gameState.gameId;
+                    log(`✅ Spiel in Firebase erstellt: ${gameResult.gameId}`);
+                }
             } else if (gameState.playerId) {
                 log(`✅ Spiel bereits in Firebase: ${gameState.gameId}`);
-            } else {
-                log('⚠️ Firebase nicht verfügbar, lokaler Modus');
             }
 
             if (gameState.selectedCategories && gameState.selectedCategories.length > 0) {
@@ -1787,50 +1643,7 @@
 
         } catch (error) {
             log(`❌ Fehler in continueWithExistingName: ${error.message}`, 'error');
-            showNotification('Setup-Fehler', 'warning');
         }
-    }
-
-    async function createGameInFirebase() {
-        try {
-            const gameResult = await firebaseService.createGame({
-                gameId: gameState.gameId,
-                hostName: gameState.playerName,
-                categories: gameState.selectedCategories || [],
-                difficulty: gameState.difficulty || 'medium'
-            });
-
-            if (gameResult.gameId && gameResult.playerId) {
-                gameState.gameId = gameResult.gameId;
-                gameState.playerId = gameResult.playerId;
-                gameState.save();
-
-                document.getElementById('game-id-display').textContent = gameState.gameId;
-
-                log(`✅ Spiel in Firebase erstellt: ${gameResult.gameId}`);
-                showNotification('Multiplayer-Spiel erstellt! 🎮', 'success');
-            } else {
-                throw new Error('Ungültige Firebase-Antwort');
-            }
-
-        } catch (error) {
-            log(`❌ Firebase-Spiel-Erstellung fehlgeschlagen: ${error.message}`, 'error');
-
-            if (!gameState.gameId) {
-                gameState.gameId = Math.random().toString(36).substr(2, 6).toUpperCase();
-                gameState.save();
-                document.getElementById('game-id-display').textContent = gameState.gameId;
-            }
-
-            showNotification('Offline-Modus - Spiel erstellt', 'warning');
-        }
-    }
-
-    function setupConnectionStatus() {
-        firebaseService.onConnectionChange((connected) => {
-            updateConnectionStatus(connected ? 'connected' : 'disconnected',
-                connected ? 'Online' : 'Offline');
-        });
     }
 
     // ===== CATEGORY SELECTION =====
@@ -1897,7 +1710,7 @@
     }
 
     async function syncWithFirebase() {
-        if (firebaseService.isReady && gameState.playerId) {
+        if (firebaseService && firebaseService.isReady && gameState.playerId) {
             try {
                 const gameRef = firebaseService.database.ref(`games/${gameState.gameId}`);
                 await gameRef.update({
@@ -2030,15 +1843,14 @@
             gameState.gamePhase = 'difficulty_selection';
             gameState.save();
 
-            if (firebaseService.isReady && gameState.playerId) {
+            // Sync with Firebase silently
+            if (firebaseService && firebaseService.isReady && gameState.playerId) {
                 await syncWithFirebase();
             }
 
-            showNotification('Kategorien gespeichert! 🎯', 'success');
-
             setTimeout(() => {
                 window.location.href = 'multiplayer-difficulty-selection.html';
-            }, 1000);
+            }, 500);
 
         } catch (error) {
             log(`❌ Fehler beim Weiterleiten: ${error.message}`, 'error');
@@ -2075,12 +1887,6 @@
         setTimeout(() => {
             notification.classList.remove('show');
         }, 3000);
-    }
-
-    function updateConnectionStatus(status, message = '') {
-        const statusEl = document.getElementById('connection-status');
-        statusEl.textContent = message || status;
-        statusEl.className = `connection-status ${status}`;
     }
 
     function updateDebugPanel(message) {
@@ -2136,7 +1942,7 @@
         window.debugMultiplayerCategories();
     }
 
-    log('✅ Multiplayer Category Selection v3.0 vollständig geladen!');
+    log('✅ Multiplayer Category Selection v4.0 vollständig geladen!');
     log('🛠️ Debug-Befehle: debugMultiplayerCategories(), toggleDebugPanel()');
 </script>
 </body>
